--- a/uis_custom_blocks/uis_custom_blocks.info.yml
+++ b/uis_custom_blocks/uis_custom_blocks.info.yml
@@ -1,3 +1,5 @@
+#Will need to leave alone for the most part, in case of updates will need to update the core requirements
+
 name: 'UIS Custom Blocks'
 type: module
 description: 'Provides custom Gutenberg blocks using React.'
