--- a/uis_custom_blocks/uis_custom_blocks.libraries.yml
+++ b/uis_custom_blocks/uis_custom_blocks.libraries.yml
@@ -1,3 +1,10 @@
+#Don't need to touch
+#This allow Webpack to properly build the js and css into the correct files
+
+#the JS for all the blocks -> blocks.js
+#SCSS for the frontend     -> style-frontend.css
+#SCSS for the editor       -> style-editor.css
+
 uis_custom_blocks:
   js:
     js/build/blocks.js: { scope: footer }
