--- a/uis_custom_blocks/js/package.json
+++ b/uis_custom_blocks/js/package.json
@@ -13,6 +13,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^41.4.2",
+    "@ckeditor/ckeditor5-react": "^11.0.0",
     "@wordpress/block-editor": "^14.16.0",
     "@wordpress/blocks": "^14.10.0",
     "@wordpress/editor": "^14.21.0",
