--- a/uis_custom_blocks/js/package.json
+++ b/uis_custom_blocks/js/package.json
@@ -20,8 +20,10 @@
     "@wordpress/editor": "^14.21.0",
     "@wordpress/element": "^6.21.0",
     "@wordpress/i18n": "^5.21.0",
+    "quill": "^2.0.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-quill": "^2.0.0"
   },
   "devDependencies": {
     "@wordpress/scripts": "^25.5.1",
