--- a/uis_custom_blocks/js/package.json
+++ b/uis_custom_blocks/js/package.json
@@ -13,17 +13,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@ckeditor/ckeditor5-build-classic": "^41.4.2",
-    "@ckeditor/ckeditor5-react": "^11.0.0",
     "@wordpress/block-editor": "^14.16.0",
     "@wordpress/blocks": "^14.10.0",
     "@wordpress/editor": "^14.21.0",
     "@wordpress/element": "^6.21.0",
     "@wordpress/i18n": "^5.21.0",
-    "quill": "^2.0.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-quill": "^2.0.0"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@wordpress/scripts": "^25.5.1",
